# PDF-Resizer

./: .gtignore  README.md  convert.bat
.github/workflows/: deploy-pages.yml
app/: PDF Converter.py  PDF Converter.spec  build.bat
app-python/: PDF Converter.py  build.bat
app-tauri/: index.html  package-lock.json  package.json  vite.config.ts
app-tauri/locales/: en.json  ru.json
app-tauri/scripts/: pad-apple-touch-icon.mjs
app-tauri/src/: main.ts  pdf-web.ts
app-tauri/src-tauri/: Cargo.toml  tauri.conf.json
app-tauri/src-tauri/icons/: icon.icns
app-tauri/src-tauri/src/: lib.rs  main.rs
tauri/: index.html  package-lock.json  package.json  vite.config.ts
tauri/locales/: en.json  ru.json
tauri/src/: main.ts  pdf-web.ts  styles.css
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: lib.rs  main.rs
